# sql-help-rust-crate

./: Cargo.toml  README.md
doc/create-index-concurrently/: index.md
src/: help.rs  lib.rs  main.rs  scans.rs
src/help/: create_index.rs
src/scans/: create_index_concurrently.rs
