[package]
name = "sql-help"
version = "0.1.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "sql-help: parse SQL text then print any SQL help that we know of, such as optimizations, clarifications. Work in progress."
readme = "README.md"
repository = "https://github.com/sixarm/sql-help-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0 OR BSD-3-Clause"
keywords = ["sql", "help", "database"]
categories = ["development-tools", "development-tools::testing", "rust-patterns"]
include = ["src/**/*", "LICENSE.md", "README.md", "llms.txt", "llms.json"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

[dependencies]
regex = "1.12.2"

[dev-dependencies]
cargo-dist = "0.22.1" # Cargo distribution builder for release engineering
cargo-release = "0.25.20" # Cargo release automation
cargo-diet = "1.2.7" #  Cargo command to make your crate lean
rustdoc-md = "0.1.0" # Convert Rust documentation JSON into clean, organized Markdown files.